// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text option > drops headerText when margins leave no room for it 1`] = `
"                                      ┌─┐
                                      │x│
                                      └─┘"
`;

exports[`text option > footerText + width option > width 3 1`] = `
"┌─┐
│f│
│o│
│o│
└ very long title ┘"
`;

exports[`text option > footerText + width option > width 5 1`] = `
"┌───┐
│foo│
└ very long title ┘"
`;

exports[`text option > footerText + width option > width 20 1`] = `
"┌──────────────────┐
│foo               │
└─ very long title ┘"
`;

exports[`text option > footerText align center 1`] = `
"┌───────────────┐
│foo bar foo bar│
└─────title─────┘"
`;

exports[`text option > footerText align center with odd remaining border width 1`] = `
"┌────────┐
│aaaaaaaa│
└─title──┘"
`;

exports[`text option > footerText align left 1`] = `
"┌───────────────┐
│foo bar foo bar│
└title──────────┘"
`;

exports[`text option > footerText align right 1`] = `
"┌───────────────┐
│foo bar foo bar│
└──────── title ┘"
`;

exports[`text option > footerText option with border style (none) 1`] = `
"foo
 title "
`;

exports[`text option > footerText option works 1`] = `
"┌───┐
│foo│
└ title ┘"
`;

exports[`text option > footerTextColor option 1`] = `
"┌───┐
│foo│
└ [41mFooter Text[49m ┘"
`;

exports[`text option > headerText + width option > width 3 1`] = `
"┌─┐
│f│
│o│
│o│
└─┘"
`;

exports[`text option > headerText + width option > width 5 1`] = `
"┌ v ┐
│foo│
└───┘"
`;

exports[`text option > headerText + width option > width 20 1`] = `
"┌ very long title ─┐
│foo               │
└──────────────────┘"
`;

exports[`text option > headerText align center 1`] = `
"┌──── title ────┐
│foo bar foo bar│
└───────────────┘"
`;

exports[`text option > headerText align center with odd remaining border width 1`] = `
"┌ title ─┐
│aaaaaaaa│
└────────┘"
`;

exports[`text option > headerText align left 1`] = `
"┌ title ────────┐
│foo bar foo bar│
└───────────────┘"
`;

exports[`text option > headerText align right 1`] = `
"┌──────  title  ┐
│foo bar foo bar│
└───────────────┘"
`;

exports[`text option > headerText option with border style (none) 1`] = `
"title
foo  "
`;

exports[`text option > headerText option works 1`] = `
"┌ title ┐
│foo    │
└───────┘"
`;

exports[`text option > headerTextColor option 1`] = `
"┌[41m Header Text [49m┐
│foo          │
└─────────────┘"
`;

exports[`text option > long footerText expands box 1`] = `
"┌───┐
│foo│
└ very long title ┘"
`;

exports[`text option > long headerText expands box 1`] = `
"┌ very long title ┐
│foo              │
└─────────────────┘"
`;

exports[`text option > text alignement option (center) + long title + padding + margin 1`] = `
"
   ┌ This is a famous movie quote: ┐
   │                               │
   │        Hello there !          │
   │       General Kenobi !        │
   │                               │
   └───────────────────────────────┘
"
`;

exports[`text option > text alignement option (center) + long title + padding 1`] = `
"┌ This is a famous movie quote: ┐
│                               │
│        Hello there !          │
│       General Kenobi !        │
│                               │
└───────────────────────────────┘"
`;

exports[`text option > text alignement option (center) + long title 1`] = `
"┌ This is a famous movie quote: ┐
│        Hello there !          │
│       General Kenobi !        │
└───────────────────────────────┘"
`;

exports[`text option > text alignement option (center) + padding 1`] = `
"┌──────────────────────┐
│                      │
│    Hello there !     │
│   General Kenobi !   │
│                      │
└──────────────────────┘"
`;

exports[`text option > text alignement option (center) 1`] = `
"┌────────────────┐
│ Hello there !  │
│General Kenobi !│
└────────────────┘"
`;

exports[`text option > text alignement option (center) after wrapping + padding 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas id      │
│    erat arcu. Integer urna mauris, sodales vel egestas eu, consequat id      │
│     turpis. Vivamus faucibus est mattis tincidunt lobortis. In aliquam       │
│       placerat nunc eget viverra. Duis aliquet faucibus diam, blandit        │
│   tincidunt magna congue eu. Sed vel ante vestibulum, maximus risus eget,    │
│      iaculis velit. Quisque id dapibus purus, ut sodales lorem. Aenean       │
│     laoreet iaculis tellus at malesuada. Donec imperdiet eu lacus vitae      │
│                                 fringilla.                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`text option > text alignement option (center) after wrapping 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas id erat   │
│   arcu. Integer urna mauris, sodales vel egestas eu, consequat id turpis.    │
│Vivamus faucibus est mattis tincidunt lobortis. In aliquam placerat nunc eget │
│ viverra. Duis aliquet faucibus diam, blandit tincidunt magna congue eu. Sed  │
│ vel ante vestibulum, maximus risus eget, iaculis velit. Quisque id dapibus   │
│ purus, ut sodales lorem. Aenean laoreet iaculis tellus at malesuada. Donec   │
│                     imperdiet eu lacus vitae fringilla.                      │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`text option > text alignement option (left) + long title + padding + margin 1`] = `
"
   ┌ This is a famous movie quote: ┐
   │                               │
   │   Hello there !               │
   │   General Kenobi !            │
   │                               │
   └───────────────────────────────┘
"
`;

exports[`text option > text alignement option (left) + long title + padding 1`] = `
"┌ This is a famous movie quote: ┐
│                               │
│   Hello there !               │
│   General Kenobi !            │
│                               │
└───────────────────────────────┘"
`;

exports[`text option > text alignement option (left) + long title 1`] = `
"┌ This is a famous movie quote: ┐
│Hello there !                  │
│General Kenobi !               │
└───────────────────────────────┘"
`;

exports[`text option > text alignement option (left) + padding 1`] = `
"┌──────────────────────┐
│                      │
│   Hello there !      │
│   General Kenobi !   │
│                      │
└──────────────────────┘"
`;

exports[`text option > text alignement option (left) 1`] = `
"┌────────────────┐
│Hello there !   │
│General Kenobi !│
└────────────────┘"
`;

exports[`text option > text alignement option (right) + long title + padding + margin 1`] = `
"
   ┌ This is a famous movie quote: ┐
   │                               │
   │               Hello there !   │
   │            General Kenobi !   │
   │                               │
   └───────────────────────────────┘
"
`;

exports[`text option > text alignement option (right) + long title + padding 1`] = `
"┌ This is a famous movie quote: ┐
│                               │
│               Hello there !   │
│            General Kenobi !   │
│                               │
└───────────────────────────────┘"
`;

exports[`text option > text alignement option (right) + long title 1`] = `
"┌ This is a famous movie quote: ┐
│                  Hello there !│
│               General Kenobi !│
└───────────────────────────────┘"
`;

exports[`text option > text alignement option (right) + padding 1`] = `
"┌──────────────────────┐
│                      │
│      Hello there !   │
│   General Kenobi !   │
│                      │
└──────────────────────┘"
`;

exports[`text option > text alignement option (right) 1`] = `
"┌────────────────┐
│   Hello there !│
│General Kenobi !│
└────────────────┘"
`;

exports[`text option > text alignement option (right) after wrapping + padding + margin 1`] = `
"
┌──────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas id      │
│    erat arcu. Integer urna mauris, sodales vel egestas eu, consequat id      │
│     turpis. Vivamus faucibus est mattis tincidunt lobortis. In aliquam       │
│       placerat nunc eget viverra. Duis aliquet faucibus diam, blandit        │
│   tincidunt magna congue eu. Sed vel ante vestibulum, maximus risus eget,    │
│      iaculis velit. Quisque id dapibus purus, ut sodales lorem. Aenean       │
│     laoreet iaculis tellus at malesuada. Donec imperdiet eu lacus vitae      │
│                                 fringilla.                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`text option > text alignement option (right) after wrapping 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas id erat│
│       arcu. Integer urna mauris, sodales vel egestas eu, consequat id turpis.│
│ Vivamus faucibus est mattis tincidunt lobortis. In aliquam placerat nunc eget│
│   viverra. Duis aliquet faucibus diam, blandit tincidunt magna congue eu. Sed│
│    vel ante vestibulum, maximus risus eget, iaculis velit. Quisque id dapibus│
│    purus, ut sodales lorem. Aenean laoreet iaculis tellus at malesuada. Donec│
│                                           imperdiet eu lacus vitae fringilla.│
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`text option > textColor option 1`] = `
"┌───┐
│[41mfoo[49m│
└───┘"
`;
